--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
+:root {
+    --title-font: 'Creepster', cursive;
+}
+
 body {
     background-color: #2a2a2a;
-    font-family: 'Creepster', cursive; 
+    font-family: var(--title-font, cursive); 
 }
 
 h1, h2, h3 {
