--- a/assets/css/storyboardstyle.css
+++ b/assets/css/storyboardstyle.css
@@ -1,20 +1,74 @@
 :root {
-    --title-font: 'Creepster', cursive;
-  }
+  --title-font: "Creepster", cursive;
+}
+
+body {
+  background-color: rgb(34, 34, 34);
+}
 
 .dialogue {
-    text-align: center;
-    width: 90%;
-    height: 200px;
-    align-items: center;
-    justify-content: center;
-    padding:50px;
-    border: 1px solid black;
-    font-size: 20px;
-    font-family: var(--title-font, cursive);
-    border-radius: 20px;
-    display: flex;
-    margin:20px;
-    background-color: rgb(25, 25, 112);
-    color: white;
+  text-align: center;
+  width: 90%;
+  height: 200px;
+  align-items: center;
+  justify-content: center;
+  padding: 50px;
+  border: 1px solid black;
+  font-size: 20px;
+  font-family: var(--title-font, cursive);
+  border-radius: 20px;
+  display: flex;
+  margin: 20px;
+  background-color: rgb(25, 25, 112);
+  color: white;
+}
+
+#question,
+#epilogue {
+  color: rgb(0, 255, 0);
+  text-align: center;
+  font-size: 20px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  padding: 20px;
+}
+
+.choice,
+#choices {
+  color: white;
+  padding: 20px;
+  flex-direction: row;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  font-size: 20px;
+  font-family: var(--title-font, cursive);
+}
+
+.choice {
+  border: 1px solid black;
+  border-radius: 20px;
+  background-color: rgb(25, 25, 112);
+}
+
+#epilogue {
+  align-content: center;
+}
+
+/* Media query for screens with a maximum width of 768px */
+@media (max-width: 768px) {
+  #choices {
+    flex-direction: column;
+  }
+
+  .dialogue {
+    font-size: 18px;
+    margin: 10px;
+    padding: 10px;
+    height: 400px;
+  }
+
+  .choice {
+    font-size: 18px;
+  }
 }
