--- a/assets/css/storyboardstyle.css
+++ b/assets/css/storyboardstyle.css
@@ -44,6 +44,7 @@ body {
   justify-content: center;
   font-size: 20px;
   font-family: var(--title-font, cursive);
+  margin: 20px;
 }
 
 .choice {
