--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,3 +49,22 @@ main {
 .hidden {
     display: none;
 }
+
+/*end page*/
+.home-btn {
+    background-color: rgb(25, 25, 112);
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    padding: 10px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+.btn-container {
+    margin-top: 50px;
+}
