--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,6 +192,10 @@ a {
     color: white;
     background-color: rgb(25, 25, 112);
   }
+
+  #confirmation-message {
+    color: white;
+}
   
   /* The Close Button */
   .close {
