--- a/assets/css/storyboardstyle.css
+++ b/assets/css/storyboardstyle.css
@@ -7,20 +7,13 @@ body {
 }
 
 .dialogue {
-  text-align: center;
+  margin: 0 auto;
   width: 90%;
-  height: 200px;
   align-items: center;
   justify-content: center;
-  padding: 50px;
-  border: 1px solid black;
+  padding: 15px;
   font-size: 20px;
   font-family: var(--title-font, cursive);
-  border-radius: 20px;
-  display: flex;
-  flex-direction: column;
-  margin: 20px;
-  background-color: rgb(25, 25, 112);
   color: white;
 }
 
@@ -29,8 +22,8 @@ body {
   color: rgb(0, 255, 0);
   text-align: center;
   font-size: 20px;
-  margin-bottom: 20px;
-  margin-top: 20px;
+  margin-bottom: 10px;
+  margin-top: 10px;
   padding: 20px;
 }
 
@@ -39,7 +32,6 @@ body {
   color: white;
   padding: 20px;
   flex-direction: row;
-  display: flex;
   align-content: center;
   justify-content: center;
   font-size: 20px;
@@ -67,7 +59,6 @@ body {
     font-size: 18px;
     margin: 10px;
     padding: 10px;
-    height: 400px;
   }
 
   .choice {
